# Cliptoo

./: .gitignore  AGENTS.md  Cargo.toml  Cliptoo Architecture.md  Cliptoo.sln  Cliptoo.slnx  README.md  TO DO.md  build-for-production.ps1  build-optimized-release.ps1  build-production-run.ps1  build-quick.ps1  build-run.ps1  lefthook.yml  package-lock.json  repomix.back.json  velopack.yml
.agents/: AGENTS.md  rules.md
.build-tools/: BuilderToolbox.ps1  Cliptoo.Builder.ps1
.github/workflows/: ci.yml
.scripts/: BuilderToolbox-config.json  BuilderToolbox.ps1  Launch Builder Toolbox.ps1
.scripts/modules/: BuildActions.ps1  BuilderToolbox.psd1  BuilderToolbox.psm1  BuilderToolboxStartup.ps1  Classes.ps1  Configuration.ps1  Dotnet.ps1  ExplorerActions.ps1  GitAndTools.ps1  Logging.ps1  MaintenanceActions.ps1  PackageActions.ps1  PublishActions.ps1
.scripts/src/: BuilderToolbox.psm1  Configuration.ps1  GitAndTools.ps1  Logging.ps1  MaintenanceActions.ps1  PublishActions.ps1  Utilities.ps1
.scripts/srcBuilderToolbox/: Configuration.ps1  ExplorerActions.ps1  MaintenanceActions.ps1
Cliptoo.Core/: AppConstants.cs  ClipTypeHelper.cs  Cliptoo.Core.csproj  CliptooController.cs
Cliptoo.Core/Configuration/: ISettingsManager.cs  LogManager.cs  Settings.cs  SettingsManager.cs
Cliptoo.Core/Database/: ClipQueryBuilder.cs  ClipRepository.cs  DatabaseInitializer.cs  DatabaseMaintenanceService.cs  DatabaseStatsService.cs  DbManager.cs  IClipRepository.cs  IDatabaseInitializer.cs  IDatabaseLockProvider.cs  IDatabaseMaintenanceService.cs  IDatabaseStatsService.cs  IDbManager.cs  RepositoryBase.cs
Cliptoo.Core/Interfaces/: IAppInteractionService.cs  IClipDataService.cs  IClipboardService.cs  IDatabaseService.cs  ISettingsService.cs
Cliptoo.Core/Logging/: ILogManager.cs  LogLevel.cs  LogManager.cs  Logger.cs
Cliptoo.Core/Native/: ClipboardMonitor.cs  ClipboardUtils.cs  GlobalHotkey.cs  IClipboardMonitor.cs  IGlobalHotkey.cs  InputSimulator.cs  KeyboardUtils.cs  NativeClipboardHelper.cs  ProcessUtils.cs  Win32.cs
Cliptoo.Core/Services/: AppInteractionService.cs  ClipDataService.cs  ClipboardService.cs  ColorParser.cs  CompareToolService.cs  ContentProcessor.cs  DatabaseService.cs  DefaultFiletypes.json  FileTypeClassifier.cs  HashingUtils.cs  ICompareToolService.cs  IContentProcessor.cs  IFileTypeClassifier.cs  IIconCacheManager.cs  IIconProvider.cs  IImageDecoder.cs  ISyntaxHighlighter.cs  ImageDecoder.cs  (+15 more)
Cliptoo.UI/: App.xaml  App.xaml.cs  Cliptoo.UI.csproj
packaging/: PKGBUILD  cliptoo.desktop
src/core/: Cargo.toml
src/core/src/: compare.rs  export.rs  icon.rs  image.rs  lib.rs  logger.rs  maintenance.rs  send_to.rs  settings.rs  stats.rs  time.rs  transform.rs
src/core/src/color/: mod.rs  oklch.rs  parser.rs
src/core/src/content/: classifier.rs  filetype.rs  hash.rs  mod.rs  preview.rs
src/core/src/db/: mod.rs  models.rs  pool.rs  queries.rs  schema.rs
src/ui/: Cargo.toml  build.rs
src/ui/assets/data/: DefaultFiletypes.json
src/ui/src/: actions.rs  app_dirs.rs  autostart.rs  drag.rs  drag_qt.cpp  edit.rs  favicon.rs  helpers.rs  hotkeys.rs  main.rs  maintenance.rs  paste.rs  positioning.rs  preview.rs  search.rs  settings.rs  source_app.rs  theme.rs  thumbnail_cache.rs  tray.rs  window.rs
src/ui/src/clipboard/: listener.rs  mod.rs  reader.rs  refresh.rs
src/ui/ui/: AppWindow.slint  ClipData.slint  ClipItem.slint  ClipList.slint  ContextMenu.slint  EditWindow.slint  FilterGrid.slint  HamburgerMenu.slint  PreviewTooltip.slint  SettingsComponents.slint  SettingsWindow.slint  Theme.slint  ToastNotification.slint  Toolbar.slint
(+123 files in other folders)
