[workspace]
resolver = "2"
members = [
    "src/core",
    "src/ui",
]

[workspace.package]
authors = ["dcog989"]
edition = "2024"
license = "MIT"
repository = "https://github.com/yourusername/cliptoo-next"
version = "2.0.0"

[workspace.dependencies]
anyhow = "1"
cc = "1"
chrono = "0.4"
const-hex = "1"
dirs = "6"
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "ico", "bmp", "tiff", "avif"] }
jxl-oxide = "0.12"
lru = "0.18"
pkg-config = "0.3"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
resvg = "0.47"
rusqlite = { version = "0.40", features = ["bundled", "backup"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
slint = { version = "1.16", features = ["backend-qt"] }
slint-build = "1.16"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
unicode-segmentation = "1"
uuid = { version = "1", features = ["v4"] }
which = "8"
wl-clipboard-rs = "0.9"
zbus = { version = "5", default-features = false, features = ["tokio"] }
